# genai-chat-bot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  MIGRATION.md  README.md  docker-compose.yml  requirements.txt
AINews/: daily_summary.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/common/: logger.py
backend/app/database/: qdrant_manager.py
backend/app/graph/: enhanced_graph_builder.py
backend/app/nodes/: enhanced_ai_news_node.py  enhanced_chatbot_node.py
backend/app/repositories/: qdrant_repository.py
frontend/: Dockerfile  index.html  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/features/chat/: Chat.tsx  slice.ts
frontend/src/features/news/: News.tsx  slice.ts
frontend/src/lib/: api.ts
frontend/src/store/: index.ts
src/langgraphagenticai/: main.py
src/langgraphagenticai/LLMS/: groqllm.py  ollamallm.py
src/langgraphagenticai/common/: logger.py
src/langgraphagenticai/database/: qdrant_manager.py  vector_search_utils.py
src/langgraphagenticai/graph/: enhanced_graph_builder.py  graph_builder.py
src/langgraphagenticai/nodes/: ai_news_node.py  basic_chatbot_node.py  chatbot_with_Tool_node.py  enhanced_ai_news_node.py  enhanced_chatbot_node.py
src/langgraphagenticai/state/: enhanced_state.py
src/langgraphagenticai/tools/: search_tool.py
src/langgraphagenticai/ui/: uiconfigfile.ini  uiconfigfile.py
src/langgraphagenticai/ui/streamlitui/: display_result.py  loadui.py
